--- a/terraform/terratest/Dockerfile
+++ b/terraform/terratest/Dockerfile
@@ -4,7 +4,7 @@ MAINTAINER "altrdev <alessandro.travi@gmail.com>"
 ARG TERRAFORM_VERSION=0.11.14
 ENV TERRAFORM_VERSION=$TERRAFORM_VERSION
 
-RUN apk --no-cache add curl git unzip && \
+RUN apk --no-cache add curl git unzip gcc g++ make ca-certificates && \
     curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
 
 RUN go get -u -d github.com/magefile/mage && \
@@ -15,5 +15,3 @@ RUN mkdir tmp && \
     curl "https://releases.hashicorp.com/terraform/${TERRAFORM_VERSION}/terraform_${TERRAFORM_VERSION}_linux_amd64.zip" -o tmp/terraform.zip && \
     unzip tmp/terraform.zip -d /bin && \
     rm -rf tmp/
-
-RUN terraform -v
