--- a/terraform/terratest/Dockerfile
+++ b/terraform/terratest/Dockerfile
@@ -4,6 +4,13 @@ MAINTAINER "altrdev <alessandro.travi@gmail.com>"
 ARG TERRAFORM_VERSION=0.11.14
 ENV TERRAFORM_VERSION=$TERRAFORM_VERSION
 
+RUN apk update && \
+    apk upgrade && \
+    apk add py-pip && \
+    pip install --upgrade pip && \
+    pip install awscli && \
+    apk add nano jq bash
+
 RUN apk --no-cache add curl git unzip gcc g++ make ca-certificates && \
     curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
 
